# make-aid

./: Cargo.toml  README.md
src/: main.rs  parser.rs  resolve_paths.rs
src/commands/: init.rs
